--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Require all plugins in a directory",
   "main": "index.js",
   "scripts": {
-    "test": "standard | snazzy && tap test.js"
+    "test": "standard | snazzy && tap test/*.js"
   },
   "repository": {
     "type": "git",
@@ -36,5 +36,10 @@
   },
   "dependencies": {
     "steed": "^1.1.3"
+  },
+  "standard": {
+    "ignore": [
+      "test/error/lib/a.js"
+    ]
   }
 }
