--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.6.0",
   "description": "Require all plugins in a directory",
   "main": "index.js",
+  "typings": "fastify-autoload.d.ts",
   "scripts": {
     "test": "standard | snazzy && tap test/*.js"
   },
@@ -28,13 +29,15 @@
   },
   "homepage": "https://github.com/fastify/fastify-autoload#readme",
   "devDependencies": {
-    "fastify": "^2.0.0",
+    "fastify": "^2.2.0",
+    "http": "^0.0.0",
     "pre-commit": "^1.2.2",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1",
     "tap": "^12.5.3"
   },
   "dependencies": {
+    "@types/node": "^11.13.2",
     "steed": "^1.1.3"
   },
   "standard": {
