--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "typings": "fastify-autoload.d.ts",
   "scripts": {
-    "test": "standard | snazzy && tap test/*.js"
+    "test": "standard | snazzy && tap test/*.js && npm run typescript",
+    "typescript": "tsc --project ./tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,8 @@
     "pre-commit": "^1.2.2",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1",
-    "tap": "^12.5.3"
+    "tap": "^12.5.3",
+    "typescript": "^3.4.3"
   },
   "dependencies": {
     "@types/node": "^11.13.2",
