--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^11.13.4",
     "fastify": "^2.2.0",
     "fastify-plugin": "^1.5.0",
+    "fastify-url-data": "^2.3.0",
     "pre-commit": "^1.2.2",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1",
