--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "pre-commit": "^1.2.2",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1",
-    "tap": "^12.5.3",
+    "tap": "^12.6.5",
     "typescript": "^3.4.3"
   },
   "dependencies": {
@@ -46,6 +46,11 @@
   "standard": {
     "ignore": [
       "test/error/lib/a.js"
+    ]
+  },
+  "greenkeeper": {
+    "ignore": [
+      "tap"
     ]
   }
 }
