--- a/package.json
+++ b/package.json
@@ -33,17 +33,17 @@
   },
   "homepage": "https://github.com/fastify/fastify-autoload#readme",
   "devDependencies": {
+    "@types/node": "^12.12.5",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^1.12.0",
-    "@types/node": "^12.0.10",
-    "fastify": "^2.2.0",
+    "fastify": "^2.10.0",
     "fastify-plugin": "^1.5.0",
-    "fastify-url-data": "^2.3.0",
+    "fastify-url-data": "^2.4.0",
     "pre-commit": "^1.2.2",
     "snazzy": "^8.0.0",
     "standard": "^14.0.0",
     "tap": "^12.6.5",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.4"
   },
   "dependencies": {
     "steed": "^1.1.3"
@@ -55,7 +55,8 @@
   },
   "greenkeeper": {
     "ignore": [
-      "tap"
+      "tap",
+      "@typescript-eslint/parser"
     ]
   }
 }
