--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^1.12.0",
     "fastify": "^2.10.0",
-    "fastify-plugin": "^1.5.0",
+    "fastify-plugin": "https://github.com/davidmarkclements/fastify-plugin",
     "fastify-url-data": "^2.4.0",
     "pre-commit": "^1.2.2",
     "snazzy": "^8.0.0",
