--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "standard | snazzy && npm run lint:typescript",
     "lint:fix": "standard --fix",
     "lint:typescript": "standard --parser @typescript-eslint/parser --plugin @typescript-eslint/eslint-plugin ./*.ts",
-    "test": "standard | snazzy && tap test/*.js && npm run typescript",
+    "test": "NODE_OPTIONS=--experimental-modules standard | snazzy && tap test/*.js && npm run typescript",
     "typescript": "tsc --project ./test/types/tsconfig.json && tap test/*.ts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fastify/fastify-autoload.git"
+  },
+  "type": "commonjs",
+  "engines": {
+    "node": ">=6"
   },
   "keywords": [
     "fastify",
@@ -40,13 +44,11 @@
     "fastify-plugin": "^1.6.0",
     "fastify-url-data": "^2.4.0",
     "pre-commit": "^1.2.2",
+    "semver": "^6.3.0",
     "snazzy": "^8.0.0",
-    "standard": "^14.0.0",
+    "standard": "^14.1.0",
     "tap": "^12.6.5",
     "typescript": "^3.6.4"
-  },
-  "dependencies": {
-    "steed": "^1.1.3"
   },
   "standard": {
     "ignore": [
@@ -58,5 +60,8 @@
       "tap",
       "@typescript-eslint/parser"
     ]
+  },
+  "dependencies": {
+    "es6-promisify": "^6.0.2"
   }
 }
