--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "@types/node": "^13.9.5",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.25.0",
-    "fastify": "^2.10.0",
-    "fastify-plugin": "^1.6.0",
-    "fastify-url-data": "^2.4.0",
+    "fastify": "^3.0.0-alpha.1",
+    "fastify-plugin": "^2.0.0",
+    "fastify-url-data": "github:frikille/fastify-url-data#v3-upgrade",
     "pre-commit": "^1.2.2",
     "snazzy": "^8.0.0",
     "standard": "^14.0.0",
