--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@types/node": "^13.9.5",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.25.0",
-    "fastify": "^3.0.0-alpha.1",
+    "fastify": "^3.0.0-rc.1",
     "fastify-plugin": "^2.0.0",
     "fastify-url-data": "github:frikille/fastify-url-data#v3-upgrade",
     "pre-commit": "^1.2.2",
