Support ESM in Node 12.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "fastify-autoload.d.ts",
   "scripts": {
     "lint": "standard | snazzy",
-    "unit": "if semver `node --version` --range '>=14'; then npm run unit:with-modules; else npm run unit:without-modules; fi",
+    "unit": "if semver `node --version` --range '>=14 || >= 12.17.0 < 13.0.0'; then npm run unit:with-modules; else npm run unit:without-modules; fi",
     "unit:with-modules": "tap test/*/*.js test/*/*.ts",
     "unit:without-modules": "tap test/commonjs/*.js test/*/*.ts",
     "test": "npm run lint && npm run unit && npm run typescript",
