--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "homepage": "https://github.com/fastify/fastify-autoload#readme",
   "devDependencies": {
     "@types/node": "^14.0.1",
-    "fastify": "^3.0.0-rc.4",
+    "fastify": "^3.0.0",
     "fastify-plugin": "^2.0.0",
     "fastify-url-data": "^3.0.1",
     "pre-commit": "^1.2.2",
