--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "unit:without-modules": "tap test/commonjs/*.js test/*/*.ts",
     "test": "npm run lint && npm run unit && npm run typescript && npm run typescript:jest",
     "typescript": "tsd",
-    "typescript:jest": "npx jest"
+    "typescript:jest": "jest"
   },
   "repository": {
     "type": "git",
