--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "unit": "if semver `node --version` --range '>=14 || >= 12.17.0 < 13.0.0'; then npm run unit:with-modules; else npm run unit:without-modules; fi",
     "unit:with-modules": "tap test/*/*.js test/*/*.ts",
     "unit:without-modules": "tap test/commonjs/*.js test/*/*.ts",
-    "test": "npm run lint && npm run unit && npm run typescript",
-    "typescript": "tsd"
+    "test": "npm run lint && npm run unit && npm run typescript && npm run typescript:jest",
+    "typescript": "tsd",
+    "typescript:jest": "jest"
   },
   "repository": {
     "type": "git",
@@ -34,14 +35,17 @@
   },
   "homepage": "https://github.com/fastify/fastify-autoload#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.7",
     "@types/node": "^14.0.1",
     "fastify": "^3.0.0",
     "fastify-plugin": "^2.0.0",
     "fastify-url-data": "^3.0.1",
+    "jest": "^26.1.0",
     "pre-commit": "^1.2.2",
     "snazzy": "^8.0.0",
     "standard": "^14.3.3",
     "tap": "^14.0.0",
+    "ts-jest": "^26.1.3",
     "tsd": "^0.13.1"
   },
   "dependencies": {
@@ -56,5 +60,16 @@
   },
   "tsd": {
     "directory": "test/typescript/definitions"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "rootDir": "./test/typescript-jest",
+    "testMatch": [
+      "**/*.test.ts"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    }
   }
 }
