--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "standard": "^16.0.1",
     "tap": "^14.10.8",
     "ts-jest": "^26.1.3",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
     "tsd": "^0.14.0"
   },
   "dependencies": {
