--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,15 +19,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Install
-        run: |
-          npm install
+      - name: Install Dependencies
+        run: npm install --ignore-scripts
       - name: Run Tests
         run: |
           npm run test
