--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,13 @@
 name: ci
-
-on: [push, pull_request]
-
+on:
+  push:
+    paths-ignore:
+      - 'docs/**'
+      - '*.md'
+  pull_request:
+    paths-ignore:
+      - 'docs/**'
+      - '*.md'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,15 +19,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Install
-        run: |
-          npm install
+      - name: Install Dependencies
+        run: npm install --ignore-scripts
       - name: Run Tests
         run: |
           npm run test
