--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "pre-commit": "^1.2.2",
     "snazzy": "^9.0.0",
     "standard": "^16.0.1",
-    "tap": "^14.10.8",
+    "tap": "^15.0.0",
     "ts-jest": "^26.1.3",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
-    "tsd": "^0.14.0"
+    "tsd": "^0.14.0",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "pkg-up": "^3.1.0",
