ci: add nodejs v16 to test matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [10, 12, 14, 16]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -27,7 +27,7 @@ jobs:
         run: npm install --ignore-scripts
       - name: Run Tests
         run: |
-          npm run test
+          npm test
 
   automerge:
     needs: build
