--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.8",
     "@types/node": "^16.0.0",
+    "@types/tap": "^15.0.5",
     "fastify": "^3.0.0",
     "fastify-plugin": "^3.0.0",
     "fastify-url-data": "^3.0.3",
@@ -47,7 +48,7 @@
     "standard": "^16.0.1",
     "tap": "^15.0.0",
     "ts-jest": "^27.0.0",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.1.0",
     "ts-node-dev": "^1.1.1",
     "tsd": "^0.17.0",
     "typescript": "^4.2.3"
