chore: upgrade github-action-merge-dependabot to v3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,27 @@
 name: ci
-on:
+'on':
   push:
     paths-ignore:
-      - 'docs/**'
+      - docs/**
       - '*.md'
   pull_request:
     paths-ignore:
-      - 'docs/**'
+      - docs/**
       - '*.md'
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-
     strategy:
       matrix:
-        node-version: [10, 12, 14, 16]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-
+        node-version:
+          - 10
+          - 12
+          - 14
+          - 16
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - macOS-latest
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
@@ -28,11 +33,13 @@ jobs:
       - name: Run Tests
         run: |
           npm test
-
   automerge:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      contents: write
     steps:
-      - uses: fastify/github-action-merge-dependabot@v2.7.1
+      - uses: fastify/github-action-merge-dependabot@v3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
