--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fastify-autoload",
-  "version": "3.12.0",
+  "name": "@fastify/autoload",
+  "version": "4.0.0",
   "description": "Require all plugins in a directory",
   "main": "index.js",
   "types": "fastify-autoload.d.ts",
@@ -81,5 +81,8 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
     }
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
