--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "fastify-plugin": "^3.0.0",
     "jest": "^27.4.7",
     "pre-commit": "^1.2.2",
-    "snazzy": "^9.0.0",
     "standard": "^17.0.0",
     "tap": "^16.0.0",
     "ts-jest": "^27.1.3",
@@ -60,8 +59,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "pkg-up": "^3.1.0",
-    "semver": "^7.3.5"
+    "pkg-up": "^3.1.0"
   },
   "standard": {
     "ignore": [
