--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@types/tap": "^15.0.5",
-    "fastify": "^3.25.3",
+    "fastify": "^4.0.0-rc.2",
     "fastify-plugin": "^3.0.0",
     "jest": "^27.4.7",
     "pre-commit": "^1.2.2",
@@ -60,8 +60,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "pkg-up": "^3.1.0",
-    "semver": "^7.3.5"
+    "pkg-up": "^3.1.0"
   },
   "standard": {
     "ignore": [
