--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "lint": "standard | snazzy",
     "lint:fix": "standard --fix | snazzy",
-    "test": "npm run lint && npm run unit && npm run typescript && npm run typescript:jest && npm run typescript:esm && npm run typescript:swc && npm run typescript:tsm",
+    "test": "npm run lint && npm run unit && npm run typescript && npm run typescript:jest && npm run typescript:esm && npm run typescript:swc && npm run typescript:tsm && npm run typescript:tsx",
     "typescript": "tsd",
     "typescript:jest": "jest",
     "typescript:esm": "node scripts/unit-typescript-esm.js",
     "typescript:swc": "node scripts/unit-typescript-swc.js",
     "typescript:tsm": "node scripts/unit-typescript-tsm.js",
+    "typescript:tsx": "node scripts/unit-typescript-tsx.js",
     "unit": "node scripts/unit.js",
     "unit:with-modules": "tap test/commonjs/*.js test/module/*.js test/typescript/*.ts",
     "unit:without-modules": "tap test/commonjs/*.js test/typescript/*.ts"
@@ -57,6 +58,7 @@
     "ts-node-dev": "^2.0.0",
     "tsd": "^0.22.0",
     "tsm": "^2.2.1",
+    "tsx": "^3.7.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
