--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/fastify/fastify-autoload#readme",
   "devDependencies": {
+    "@fastify/pre-commit": "^2.0.2",
     "@fastify/url-data": "^5.0.0",
     "@swc/core": "^1.2.129",
     "@swc/register": "^0.1.9",
@@ -49,7 +50,6 @@
     "fastify": "^4.0.0-rc.2",
     "fastify-plugin": "^4.0.0",
     "jest": "^27.4.7",
-    "pre-commit": "^1.2.2",
     "snazzy": "^9.0.0",
     "standard": "^17.0.0",
     "tap": "^16.0.0",
