--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "lint": "standard | snazzy",
     "lint:fix": "standard --fix | snazzy",
-    "test": "npm run lint && npm run unit && npm run typescript && npm run typescript:jest && npm run typescript:esm && npm run typescript:swc && npm run typescript:tsm && npm run typescript:tsx",
+    "test": "npm run lint && npm run unit && npm run typescript && npm run typescript:jest && npm run typescript:esm && npm run typescript:swc && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx",
     "typescript": "tsd",
     "typescript:jest": "jest",
     "typescript:esm": "node scripts/unit-typescript-esm.js",
     "typescript:swc": "node scripts/unit-typescript-swc.js",
+    "typescript:swc-node-register": "node scripts/unit-typescript-swc-node-register.js",
     "typescript:tsm": "node scripts/unit-typescript-tsm.js",
     "typescript:tsx": "node scripts/unit-typescript-tsx.js",
     "unit": "node scripts/unit.js",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@fastify/pre-commit": "^2.0.2",
     "@fastify/url-data": "^5.0.0",
+    "@swc-node/register": "^1.5.1",
     "@swc/core": "^1.2.129",
     "@swc/register": "^0.1.9",
     "@types/jest": "^28.1.6",
