--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "fastify": "^4.0.0-rc.2",
     "fastify-plugin": "^4.0.0",
     "jest": "^28.1.3",
+    "semver": "^7.3.7",
     "snazzy": "^9.0.0",
     "standard": "^17.0.0",
     "tap": "^16.0.0",
