--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "typescript:esbuild": "node scripts/unit-typescript-esbuild.js",
     "typescript:vitest": "vitest run",
     "unit": "node scripts/unit.js",
-    "unit:with-modules": "tap test/commonjs/*.js test/module/*.js test/typescript/*.ts",
-    "unit:without-modules": "tap test/commonjs/*.js test/typescript/*.ts"
+    "unit:with-modules": "tap test/commonjs/*.js test/module/*.js test/typescript/*.ts"
   },
   "repository": {
     "type": "git",
@@ -54,7 +53,6 @@
     "fastify": "^4.0.0-rc.2",
     "fastify-plugin": "^4.0.0",
     "jest": "^28.1.3",
-    "semver": "^7.3.7",
     "snazzy": "^9.0.0",
     "standard": "^17.0.0",
     "tap": "^16.0.0",
