--- a/package.json
+++ b/package.json
@@ -69,9 +69,7 @@
     "vite": "^4.0.0",
     "vitest": "^0.34.1"
   },
-  "dependencies": {
-    "pkg-up": "^3.1.0"
-  },
+  "dependencies": {},
   "standard": {
     "ignore": [
       "test/*/*-error/lib/a.js"
