--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "standard | snazzy",
     "lint:fix": "standard --fix | snazzy",
-    "test": "npm run unit && npm run typescript && npm run typescript:jest && npm run typescript:esm && npm run typescript:swc && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild",
+    "test": "npm run unit && npm run typescript && npm run typescript:jest && npm run typescript:esm && npm run typescript:swc && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild && npm run typescript:vite-node",
     "typescript": "tsd",
     "typescript:jest": "jest",
     "typescript:esm": "node scripts/unit-typescript-esm.js",
@@ -17,6 +17,7 @@
     "typescript:tsm": "node scripts/unit-typescript-tsm.js",
     "typescript:tsx": "node scripts/unit-typescript-tsx.js",
     "typescript:esbuild": "node scripts/unit-typescript-esbuild.js",
+    "typescript:vite-node": "node scripts/unit-typescript-vite-node.js",
     "typescript:vitest": "vitest run",
     "typescript:vitest:dev": "vitest",
     "unit": "node scripts/unit.js",
@@ -63,7 +64,7 @@
     "ts-node-dev": "^2.0.0",
     "tsd": "^0.29.0",
     "tsm": "^2.2.1",
-    "tsx": "^3.7.1",
+    "tsx": "^4.6.2",
     "typescript": "^5.0.2",
     "esbuild": "^0.19.2",
     "esbuild-register": "^3.4.1",
