--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typescript:vitest": "vitest run",
     "typescript:vitest:dev": "vitest",
     "unit": "node scripts/unit.js",
-    "unit:with-modules": "tap test/issues/*/test.js test/commonjs/*.js test/module/*.js test/typescript/*.ts"
+    "unit:with-modules": "tap -J test/issues/*/test.js test/commonjs/*.js test/module/*.js test/typescript/*.ts"
   },
   "repository": {
     "type": "git",
@@ -60,6 +60,7 @@
     "snazzy": "^9.0.0",
     "standard": "^17.0.0",
     "tap": "^16.0.0",
+    "tap-mocha-reporter": "^5.0.4",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^2.0.0",
