--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "standard | snazzy",
     "lint:fix": "standard --fix | snazzy",
-    "test": "npm run unit && npm run typescript && npm run typescript:jest && npm run typescript:esm && npm run typescript:swc && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild",
+    "test": "npm run typescript && npm run typescript:jest && npm run typescript:swc && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild && npm run unit",
     "typescript": "tsd",
     "typescript:jest": "jest",
     "typescript:esm": "node scripts/unit-typescript-esm.js",
@@ -19,8 +19,8 @@
     "typescript:esbuild": "node scripts/unit-typescript-esbuild.js",
     "typescript:vitest": "vitest run",
     "typescript:vitest:dev": "vitest",
-    "unit": "node scripts/unit.js",
-    "unit:with-modules": "tap test/issues/*/test.js test/commonjs/*.js test/module/*.js test/typescript/*.ts"
+    "unit": "tap plugin rm @tapjs/typescript && node scripts/unit.js",
+    "unit:with-modules": "tap test/issues/*/test.js test/commonjs/*.js test/module/*.js"
   },
   "repository": {
     "type": "git",
@@ -43,34 +43,34 @@
     "url": "https://github.com/fastify/fastify-autoload/issues"
   },
   "homepage": "https://github.com/fastify/fastify-autoload#readme",
-  "dependencies": {},
   "devDependencies": {
-    "@fastify/pre-commit": "^2.0.2",
-    "@fastify/url-data": "^5.0.0",
-    "@swc-node/register": "^1.5.1",
-    "@swc/core": "^1.2.129",
+    "@fastify/pre-commit": "^2.1.0",
+    "@fastify/url-data": "^5.4.0",
+    "@swc-node/register": "^1.9.0",
+    "@swc/core": "^1.4.13",
     "@swc/register": "^0.1.9",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^20.1.0",
-    "@types/tap": "^15.0.5",
-    "esbuild": "^0.19.2",
-    "esbuild-register": "^3.4.1",
-    "fastify": "^4.0.0-rc.2",
-    "fastify-plugin": "^4.0.0",
-    "jest": "^28.1.3",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.7",
+    "@types/tap": "^15.0.11",
+    "fastify": "^4.26.2",
+    "fastify-plugin": "^4.5.1",
+    "jest": "^29.7.0",
     "snazzy": "^9.0.0",
-    "standard": "^17.0.0",
-    "tap": "^16.0.0",
-    "ts-jest": "^28.0.7",
-    "ts-node": "^10.4.0",
+    "standard": "^17.1.0",
+    "tap": "^18.7.2",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "tsd": "^0.29.0",
-    "tsm": "^2.2.1",
-    "tsx": "^3.7.1",
-    "typescript": "^5.0.2",
-    "vite": "^5.0.0",
-    "vitest": "^0.34.1"
+    "tsd": "^0.31.0",
+    "tsm": "^2.3.0",
+    "tsx": "^4.7.2",
+    "typescript": "^5.4.5",
+    "esbuild": "^0.20.2",
+    "esbuild-register": "^3.5.0",
+    "vite": "^5.2.8",
+    "vitest": "^1.5.0"
   },
+  "dependencies": {},
   "standard": {
     "ignore": [
       "test/*/*-error/lib/a.js"
