create specific test for unit test test/typescript/*.ts

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "standard | snazzy",
     "lint:fix": "standard --fix | snazzy",
     "test": "npm run typescript && npm run typescript:jest && npm run typescript:swc && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild && npm run unit",
-    "typescript": "tsd",
+    "typescript": "tap plugin add @tapjs/typescript && tsd",
     "typescript:jest": "jest",
+    "typescript:default": "node scripts/unit-typescript.js",
     "typescript:esm": "node scripts/unit-typescript-esm.js",
     "typescript:swc": "node scripts/unit-typescript-swc.js",
     "typescript:swc-node-register": "node scripts/unit-typescript-swc-node-register.js",
