--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "standard | snazzy",
     "lint:fix": "standard --fix | snazzy",
-    "test": "npm run typescript && npm run typescript:jest && npm run typescript:swc && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild && npm run unit",
+    "test": "npm run typescript && npm run typescript:jest && npm run typescript:default && npm run typescript:swc && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild && npm run unit",
     "typescript": "tap plugin add @tapjs/typescript && tsd",
     "typescript:jest": "jest",
     "typescript:default": "node scripts/unit-typescript.js",
