--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastify/autoload",
-  "version": "5.10.0",
+  "version": "6.0.0-pre.fv5.1",
   "description": "Require all plugins in a directory",
   "main": "index.js",
   "type": "commonjs",
