chore(package): remove trailing comma
Signed-off-by: Frazer Smith <frazer.dev@icloud.com>

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "contributors": [
     {
       "name": "Tomas Della Vedova",
-      "url": "http://delved.org",
+      "url": "http://delved.org"
     },
     {
       "name": "Manuel Spigolon",
