--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint:fix": "eslint --fix",
     "test": "npm run typescript && npm run typescript:native && npm run typescript:jest && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild && npm run unit",
     "typescript": "tsd",
+    "typescript:bun": "bun scripts/unit-typescript-bun-esm.js",
+    "typescript:deno": "deno -A scripts/unit-typescript-deno-esm.js",
     "typescript:jest": "jest",
     "typescript:esm": "node scripts/unit-typescript-esm.js",
     "typescript:swc-node-register": "node scripts/unit-typescript-swc-node-register.js",
@@ -75,8 +77,8 @@
   "devDependencies": {
     "@fastify/url-data": "^6.0.0",
     "@jsumners/line-reporter": "^1.0.1",
-    "@swc-node/register": "^1.9.1",
-    "@swc/core": "^1.5.25",
+    "@swc-node/register": "1.11.1",
+    "@swc/core": "1.13.20",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.8",
     "borp": "^0.21.0",
